--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,38 +6,17 @@ on:
   pull_request:
     branches: [ main, develop ]
 
+permissions:
+  contents: read
+  security-events: write
+  pull-requests: write
+
 jobs:
   api-ci:
     uses: ./.github/workflows/ci-api.yml
 
   ml-ci:
     uses: ./.github/workflows/ci-ml.yml
-
-  frontend-lint:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: frontend/web
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '18'
-        cache: 'npm'
-        cache-dependency-path: frontend/web/package-lock.json
-
-    - name: Install dependencies
-      run: npm ci
-
-    - name: Run ESLint
-      run: npm run lint
-
-    - name: Build application
-      run: npm run build
 
   extension-lint:
     runs-on: ubuntu-latest
@@ -62,7 +41,7 @@ jobs:
 
   docker-compose-test:
     runs-on: ubuntu-latest
-    needs: [api-ci, ml-ci, frontend-lint]
+    needs: [api-ci, ml-ci]
 
     steps:
     - name: Checkout code
@@ -103,12 +82,6 @@ jobs:
         scan-ref: '.'
         format: 'sarif'
         output: 'full-scan-results.sarif'
-
-    - name: Upload security scan results
-      uses: github/codeql-action/upload-sarif@v2
-      if: always()
-      with:
-        sarif_file: 'full-scan-results.sarif'
 
   dependency-review:
     runs-on: ubuntu-latest
