--- a/.github/workflows/ci-ml.yml
+++ b/.github/workflows/ci-ml.yml
@@ -44,6 +44,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install -r dev-requirements.txt
 
     - name: Run flake8
       run: |
@@ -84,7 +85,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pytest pytest-cov
+        pip install -r dev-requirements.txt
 
     - name: Run tests (skip if no tests)
       run: |
