--- a/backend/ai-service/requirements.txt
+++ b/backend/ai-service/requirements.txt
@@ -42,12 +42,7 @@ joblib==1.3.2
 pickle5==0.0.12; python_version < "3.8"
 cloudpickle==2.2.1
 
-# Development and testing (optional for production)
-pytest==7.4.2
-pytest-cov==4.1.0
-black==23.9.1
-flake8==6.0.0
-mypy==1.5.1
+## Development and testing (moved to dev-requirements.txt)
 
 # Health check and monitoring
 psutil==5.9.5
