--- a/.github/workflows/ci-api.yml
+++ b/.github/workflows/ci-api.yml
@@ -12,6 +12,10 @@ on:
       - 'backend/api/**'
       - '.github/workflows/ci-api.yml'
 
+permissions:
+  contents: read
+  security-events: write
+
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -36,9 +40,6 @@ jobs:
     - name: Run ESLint
       run: npm run lint
 
-    - name: Check code formatting
-      run: npm run format:check
-
   test:
     runs-on: ubuntu-latest
     defaults:
@@ -60,14 +61,7 @@ jobs:
       run: npm ci
 
     - name: Run tests
-      run: npm run test:ci
-
-    - name: Upload coverage reports
-      uses: codecov/codecov-action@v3
-      with:
-        file: ./backend/api/coverage/lcov.info
-        flags: api
-        name: API Coverage
+      run: npm test
 
   security:
     runs-on: ubuntu-latest
@@ -90,21 +84,8 @@ jobs:
       run: npm ci
 
     - name: Run security audit
-      run: npm run security
-
-    - name: Run Trivy vulnerability scanner
-      uses: aquasecurity/trivy-action@master
-      with:
-        scan-type: 'fs'
-        scan-ref: './backend/api'
-        format: 'sarif'
-        output: 'trivy-results.sarif'
-
-    - name: Upload Trivy scan results
-      uses: github/codeql-action/upload-sarif@v2
-      if: always()
-      with:
-        sarif_file: 'trivy-results.sarif'
+      run: npm audit --audit-level=moderate
+      continue-on-error: true
 
   build:
     runs-on: ubuntu-latest
@@ -139,28 +120,14 @@ jobs:
       run: |
         docker run --rm creative-pathway-api:${{ github.sha }} npm test || true
 
-  docker-security-scan:
+  docker-build:
     runs-on: ubuntu-latest
-    needs: build
+    needs: [lint, test]
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Build Docker image for scanning
+    - name: Build Docker image
       working-directory: backend/api
-      run: docker build -t creative-pathway-api-scan .
-
-    - name: Run Trivy on Docker image
-      uses: aquasecurity/trivy-action@master
-      with:
-        scan-type: 'image'
-        scan-ref: 'creative-pathway-api-scan'
-        format: 'sarif'
-        output: 'docker-trivy-results.sarif'
-
-    - name: Upload Docker scan results
-      uses: github/codeql-action/upload-sarif@v2
-      if: always()
-      with:
-        sarif_file: 'docker-trivy-results.sarif'
+      run: docker build -t creative-pathway-api:latest .
